[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`tsp-tools` is a package for Traveling Salesman Problem for Python."
homepage = "https://github.com/SaitoTsutomu/tsp-tools"
license = "Apache-2.0"
name = "tsp-tools"
readme = "README.rst"
version = "0.1.1"

[tool.poetry.dependencies]
PuLP = "^2.7"
more-itertools = "^10.1"
pandas = "^2.0"
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^23.7"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.4"
pytest = "^7.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
