[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`tsp-tools` is a package for Traveling Salesman Problem for Python."
homepage = "https://github.com/SaitoTsutomu/tsp-tools"
license = "Apache-2.0"
name = "tsp-tools"
readme = "README.rst"
version = "0.2.0"

[tool.poetry.dependencies]
PuLP = "^2.9"
more-itertools = "^10.4"
pandas = "^2.2"
python = "^3.12"

[tool.poetry.dev-dependencies]
mypy = "^1.11"
pytest = "^8.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
