[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "more-itertools>=10.5.0",
  "pandas>=2.2.3",
  "pulp>=2.9.0",
]
description = "`tsp-tools` is a package for Traveling Salesman Problem for Python."
license = {text = "Apache-2.0"}
name = "tsp-tools"
readme = "README.md"
requires-python = ">=3.12"
version = "0.3.2"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/tsp-tools"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "CPY", "D", "DOC", "E501", "PD011", "PLR2004"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
